# dft-book

./: .doit.db.bak  .doit.db.dir  .gitignore  Makefile  README.html  README.md  README.org  _config.yml  _toc.yml  archive.html  archives.html  categories.html  conf.py  convert-to-notebooks.el  dft-header.org  dft.bib  dft.css  dft.el  dft.html  dft.mobi  dft.org  dft.org_archive  dftbook.sty  header.org  hello-world.html  help.html  help.org  index.html  index.org  make.el  params.json  pyproject.toml  requirements.txt  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  state_data.json  system_info.py  topics-to-discuss.html
2016/: index.html
author/: john-kitchin.html
categories/: cat_bulk-magnetism.xml  cat_molecule.xml  cat_multiprocessing-threads.xml  cat_queue-job-management.xml  functional.xml  index.html
category/: blog.html
chapters/: 01-introduction-to-book.org  02-introduction-to-dft.org  03-molecules.org  04-bulk-systems.org  05-surfaces.org  06-atomistic-thermodynamics.org  07-advanced-electronic-structure.org  08-databases.org  09-acknowledgments.org  10-appendices.org  11-python.org  12-references.org  13-gnu-fdl.org  14-index.org  15-build.org
dft-scripts/: script-1.py  script-10.py  script-100.py  script-101.py  script-102.py  script-103.py  script-104.py  script-105.py  script-106.py  script-107.py  script-108.py  script-109.py  script-11.py  script-110.py  script-111.py  script-112.py  script-113.py  script-114.py  script-115.py  script-116.py  script-117.py  script-118.py  script-119.py  script-12.py  script-120.py  script-121.py  (+248 more)
(+165 files in other folders)
